--- a/inst/doc/LiebermanAidenHiC2009.Rnw
+++ b/inst/doc/LiebermanAidenHiC2009.Rnw
@@ -14,12 +14,24 @@
 \usepackage{url}
 \usepackage{listings}
 
-\SweaveOpts{keep.source=TRUE,eps=FALSE,include=FALSE,height=4.5,width=4} 
+\SweaveOpts{keep.source=TRUE,eps=FALSE,prefix=FALSE,include=FALSE,height=4.5,width=4} 
+
 \newcommand{\Robject}[1]{\texttt{#1}}
 \newcommand{\Rpackage}[1]{\textit{#1}}
 \newcommand{\Rclass}[1]{\textit{#1}}
 \newcommand{\Rfunction}[1]{{\small\texttt{#1}}}
 \newcommand{\fixme}[1]{{\textbf{Fixme:} \textit{\textcolor{blue}{#1}}}}
+
+\newcommand{\fixme}[1]{{\textbf{Fixme:} \textit{\textcolor{blue}{#1}}}}
+\newcommand{\myfig}[3]{%
+  \begin{figure}[tb!]
+    \begin{center}
+      \includegraphics[width=#2]{#1}
+      \caption{\label{#1}#3}
+    \end{center}
+  \end{figure}
+}
+\renewcommand{\floatpagefraction}{0.9}	
 
 \title{\textsf{\textbf{Exploration of HiC data}}}
 \author{Felix Klein}
@@ -65,29 +77,42 @@ Altogether, these files encompass ca.~X Mio lines
 We used \texttt{sed} \fixme{or whatever you prefer} to
 % e.g.
 <<readtable, eval=FALSE>>=
-r = read.table(gzfile("GSM455133_30E0LAAXX.1.maq.hic.summary.binned.txt.gz"), header=FALSE, sep="\t")
-colnames(r) = c("read name", "chromosome1", "position1", "strand1", "restrictionfragment1", 
-                             "chromosome2", "position2", "strand2", "restrictionfragment2")
-rs = subset(r, chromosome1==14L | chromosome2==14L) 
+##  this should be a vector of all 6 filenames
+files = c("GSM455133_30E0LAAXX.1.maq.hic.summary.binned.txt.gz")
+
+df = vector(mode=="list", length=length(files))
+for(i in seq(along=files)) {
+  r = read.table(gzfile(files[i]), header=FALSE, sep="\t")
+  colnames(r) = c("read name",
+     "chromosome1", "position1", "strand1", "restrictionfragment1", 
+     "chromosome2", "position2", "strand2", "restrictionfragment2")
+  df[[i]] = subset(r, chromosome1==14L | chromosome2==14L) 
+}
+
+##  I am not quite whether all six files can be concatenated, or how exactly they belong together, so you need to figure that one out
+LiebermanAidenHiC2009 = do.call(rbind, df)
+save(LiebermanAidenHiC2009, file="/path/to/data/directory/LiebermanAidenHiC2009")
 @ 
-select only those read pairs for which at least one end aligned to chromosome 14.
+We selected only those read pairs for which at least one end aligned to chromosome 14.
 
+Computation of the smoothed adjacency matrix
+Use Only read pairs within start and end in chr14
 
-Felix, in order fill a matrix with such a datatructure, you can perhaps use the matrix-method for the "[" operator,
-such as 
-<<fillmatrix, eval=FALSE>>=
-m = matrix(NA_integer_, nrow=n, ncol=n)
+<<subs>>=
+rs = subset(df, chromosome1==14L & chromosome2==14L) 
 
-## 1. bin the positions
+pos = with(rs, cbind(position1, position2))
 
-## 2. do something that makes the rows in rs unique with respect to (positioon1, position2),
-##   and let 'multiplicity' count their multiplicty  
-
-m[ cbind(rs$position1, rs$position2) ] = rs$multiplicity
+library("KernSmooth")
+chrlen = max(pos)
+den = bkde2D( pos, bandwidth=c(1,1)*3e5, gridsize=ceiling(c(1,1)*chrlen/3e5))
 @ 
 
-Perhaps \Rfunction{kde2d} would also be an option!
+<<figmatrix,fig=TRUE,width=7,height=7>>=
+with(den, image(x=x1,y=x2,z=fhat^.3, col=colorRampPalette(c("white","blue"))(256), useRaster=TRUE))
+@ 
 
+\myincfig{figmatrix}{0.7\textwidth}{Adjacency matrix obtained from smoothing the positions of paired read alignments.}
 
 %---------------------------------------------------------
 % SessionInfo
