--- a/inst/doc/LiebermanAidenHiC2009.bib
+++ b/inst/doc/LiebermanAidenHiC2009.bib
@@ -1,5 +1,5 @@
 % 19815776 
-@Article{LiebemanAiden2009,
+@Article{LiebermanAiden2009,
    Author="Lieberman-Aiden, E.  and van Berkum, N. L.  and Williams, L.  and Imakaev, M.  and Ragoczy, T.  and Telling, A.  and Amit, I.  and Lajoie, B. R.  and Sabo, P. J.  and Dorschner, M. O.  and Sandstrom, R.  and Bernstein, B.  and Bender, M. A.  and Groudine, M.  and Gnirke, A.  and Stamatoyannopoulos, J.  and Mirny, L. A.  and Lander, E. S.  and Dekker, J. ",
    Title="{{C}omprehensive mapping of long-range interactions reveals folding principles of the human genome}",
    Journal="Science",
